syntax = "proto3";

package ecliptix.proto;
option csharp_namespace = "Grpc.Services";

service HealthCheck {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}